--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "@supabase/supabase-js": "^2.45.0",
     "dotenv": "^17.3.1",
     "express": "^4.19.2",
+    "mammoth": "^1.11.0",
+    "multer": "^2.1.0",
     "openai": "^4.0.0",
+    "pdf-parse": "^2.4.5",
     "twilio": "^5.0.0"
   }
 }
