--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "mammoth": "^1.11.0",
     "multer": "^2.1.0",
     "openai": "^4.0.0",
-    "pdf-parse": "^2.4.5",
-    "twilio": "^5.0.0"
+    "twilio": "^5.0.0",
+    "unpdf": "^1.4.0"
   }
 }
